--- a/main.css
+++ b/main.css
@@ -4,6 +4,10 @@
   padding:0;
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
 header {
     background-image: linear-gradient(90deg,#766dff 0%,#88f3ff 100%);
 }
@@ -151,6 +155,8 @@ i:hover {
     margin: auto;
     padding-top: 4rem;
     padding-bottom: 1rem;
+    font-family: heebo, sans-serif;
+    font-size: 25px;
 }
 
 .experience-container {
@@ -179,7 +185,7 @@ i:hover {
 .experience-date {
     width: 100%;
     margin-left: 8%;
-    font-size: 16px;
+    font-size: 20.25px;
     font-family: roboto, sans-serif;
     font-weight: 400;
     color: rgba(255, 255, 255, 0.75);
@@ -207,5 +213,6 @@ i:hover {
     font-size: 15px;
     font-family: roboto, sans-serif;
     font-weight: 400;
+    letter-spacing: 0.8px;
     color: rgba(255, 255, 255, 0.75);
 }
