--- a/main.css
+++ b/main.css
@@ -107,7 +107,7 @@ li a {
     margin-bottom: 40px;
 }
 
-.material-icons {
+.contact > li > .material-icons {
     color: #7c9cff;
     font-weight: 300;
     padding-right: 1rem;
@@ -246,7 +246,7 @@ i:hover {
     padding-left: 7rem;
 }
 
-.education-items {
+.education-items{
     width: 13rem;
     height: 13rem;
     background-color: white;
@@ -255,24 +255,33 @@ i:hover {
     margin-top: 1rem;
 }
 
-.education-items:hover {
+.education-items:hover{
     box-shadow: 3px 3px 10px #7c9cff;
+}
+
+.education-items:hover .hover-card {
+    color:#7c9cff !important;
+}
+
+.education-items:hover .material-icons {
+    color:#7c9cff !important;
 }
 
 .education-date {
     width: 100%;
-    margin-left: 8%;
     font-size: 20.25px;
     font-family: roboto, sans-serif;
     font-weight: 400;
-    /*color: rgba(255, 255, 255, 0.75);*/
+    color: rgba(82, 81, 81, 0.75);
+    padding-top: 1.5rem;
 }
 
 .education-details > h4 {
     /*color: #fff;*/
     font-size: 21px;
     text-transform: uppercase;
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
     font-family: heebo, sans-serif;
     font-weight: 700;
 }
@@ -293,5 +302,11 @@ i:hover {
     letter-spacing: 0.8px;
     /*color: rgba(255, 255, 255, 0.75);*/
 } 
+
+.education-items .material-icons {
+    font-weight: 300;
+    font-size: 2em;
+    color: lightgrey;
+}
 
 
