--- a/main.css
+++ b/main.css
@@ -358,4 +358,15 @@ i:hover {
     border-radius: 5px;
     padding: .8rem .5rem;
     width: 20rem;
+    font-family: roboto, sans-serif;
+    font-weight: 600;
+    color: rgba(82, 81, 81, 0.75);
+}
+
+.skills-items li:hover {
+    background-image: linear-gradient(90deg,#766dff 0%,#88f3ff 100%);
+    color: white;
+    width: 22rem;
+    height: auto;
+    box-shadow: 3px 3px 10px  #7c9cff;
 }
