--- a/main.css
+++ b/main.css
@@ -16,7 +16,6 @@ nav {
     display: flex; 
     justify-content: space-between;
     padding: 1.5em;
-    margin-bottom: 4rem;
     align-items: center;
 }
 
@@ -43,16 +42,21 @@ li a {
     font-weight: 600;
 }
 
+.main-bg {
+    background-color: whitesmoke;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+}
+
 .profile-container{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     background-color: white;
-    box-shadow: 2px 2px 8px #7c9cff;
+    box-shadow: 2px 2px 8px dimgrey;
     width: 95%;
     margin: auto;
-    margin-bottom: 4rem;
     border-radius: 10px;
 }
 
@@ -314,6 +318,10 @@ i:hover {
     color: lightgrey;
 }
 
+.skill {
+    background-color: whitesmoke;
+}
+
 .skill-container {
     margin-bottom: 4rem;
 }
@@ -353,7 +361,7 @@ i:hover {
 .skills-items li {
     list-style-type: none;
     background-color: white;
-    box-shadow: 2px 2px 8px  #7c9cff;
+    box-shadow: .8px .8px 3px  grey;
     margin-bottom: .8rem;
     border-radius: 5px;
     padding: .8rem .5rem;
@@ -366,7 +374,31 @@ i:hover {
 .skills-items li:hover {
     background-image: linear-gradient(90deg,#766dff 0%,#88f3ff 100%);
     color: white;
-    width: 22rem;
     height: auto;
     box-shadow: 3px 3px 10px  #7c9cff;
+}
+
+.to-top-btn {
+    background-color: #272e77;
+    width: 5em;
+    height: 5em;
+    border-radius: 50%;
+    color: lightgrey;
+    position: fixed;
+    border: none;
+    right: 1.5rem;
+    bottom: 2rem;
+    z-index: 99;
+}
+
+.to-top-btn:hover {
+    background-color: lightgrey;
+    color: #0c0844;
+}
+
+button p {
+    font-weight: 500;
+    margin-top: -1rem;
+    padding-bottom: 1.5rem;
+    padding-top: .2rem;
 }
