--- a/main.css
+++ b/main.css
@@ -9,7 +9,10 @@ html {
   }
 
 header {
-    background-image: linear-gradient(90deg,#766dff 0%,#88f3ff 100%);
+    background-image: linear-gradient(90deg,rgba(118, 109, 255, 0.8) 0%,rgba(136, 243, 255, 0.8) 100%);
+    position: fixed;
+    width: 100%;
+    background-color: transparent;
 }
 
 nav {
@@ -44,7 +47,7 @@ li a {
 
 .main-bg {
     background-color: whitesmoke;
-    padding-top: 4rem;
+    padding-top: 10rem;
     padding-bottom: 4rem;
 }
 
@@ -323,7 +326,7 @@ i:hover {
 }
 
 .skill-container {
-    margin-bottom: 4rem;
+    padding-bottom: 4rem;
 }
 
 .skill-title {
@@ -401,4 +404,98 @@ button p {
     margin-top: -1rem;
     padding-bottom: 1.5rem;
     padding-top: .2rem;
+}
+
+.footer {
+    background-color: black;
+    color: white;
+}
+
+.contact-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 4rem 2rem 3rem 2rem;
+}
+
+.about {
+    width: 25%;
+    height: auto;
+    margin-right: 5rem;
+}
+
+.contact-container h3 {
+    font-family: heebo, sans-serif;
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+
+.contact-container p {
+    font-family: roboto, sans-serif;
+    font-weight: 400;
+    font-size: .8rem;
+    letter-spacing: .8px;
+    color: #777;
+    line-height: 1.3rem;
+    padding-top: 1rem;
+}
+
+.form {
+    width: 35%;
+    height: auto;
+}
+
+form .name, .email {
+    width: 75%;
+    height: auto;
+    padding: .5rem;
+    border: 1px solid lightgrey;
+    border-radius: 3px;
+    margin-top: 1rem;
+}
+
+form .comment {
+    resize: none;
+    width: 75%;
+    height: 4rem;
+    padding: .5rem;
+    border: 1px solid lightgrey;
+    border-radius: 3px;
+    margin-top: 1rem;
+    font-family: roboto, sans-serif;
+}
+
+form .btn {
+    width: 15%;
+    height: 2rem;
+    background-image: linear-gradient(90deg,#766dff 0%,#88f3ff 100%);
+    color: whitesmoke;
+    border: none;
+    border-radius: 3px;
+    margin-top: 1rem;
+}
+
+form .btn:hover {
+    background-image: linear-gradient(90deg, #88f3ff 0%,#766dff 100%);
+}
+
+.social {
+    width: 15%;
+    height: auto;
+}
+
+.links {
+    padding-top: 2rem;
+}
+
+.links a {
+    text-decoration: none;
+}
+.links i {
+    padding-right: 1rem;
+    color: #cccccc;
+}
+
+.links i:hover {
+    color: #007bff;
 }
