--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ nav {
 }
 
 .logo {
-    width: 10%;
+    width: 3rem;
     height: auto;
     border-radius: 50%;
 }
@@ -498,4 +498,53 @@ form .btn:hover {
 
 .links i:hover {
     color: #007bff;
+}
+
+@media only screen and (max-width: 768px) {
+    body {
+
+    }
+    .nav-bar {
+        overflow: hidden;
+        background-color: black;
+        position: relative;
+    }
+
+    .nav-bar #links {
+        display: none;
+        padding-top: 2.5rem;
+    }
+
+    .nav-bar a {
+        color: white;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+      }
+
+      .nav-bar a.icon {
+        background: #304353;
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 4rem;
+        height: 3.7rem;
+        padding-top: 1.3rem;
+        padding-left: 1.2rem;
+        margin-right: 1.1rem;
+      }
+
+      .nav-bar a:hover {
+        background-color: rgb(61, 83, 102);
+        color: white;
+      }
+
+      .active {
+        background-color: #04AA6D;
+        color: white;
+      }
+
+
 }
