--- a/main.css
+++ b/main.css
@@ -656,13 +656,12 @@ form .btn:hover {
         text-align: center;
         background-color: black;
         z-index: 1;
-        padding-left: 1rem;
-        margin-top: 21rem;
+        margin-top: 20rem;
         margin-right: -1.5rem;
-        padding-bottom: 1rem;
-        
+        padding-top: .2rem;
+        padding-bottom: 1.2rem;
       }
-
+      
       .topnav a.icon {
         display: block;
         position: absolute;
@@ -681,13 +680,17 @@ form .btn:hover {
     #links a {
         display: block;
         padding-top: 1rem;
+        font-size: 1.1em;
+        font-weight: 500;
     }
 
+    .main-bg {
+        padding-top: 8rem;
+    }
 
     .profile {
         padding-left: 2rem;
         padding-right: 0;
-
     }
 
     .profile-name {
@@ -795,6 +798,11 @@ form .btn:hover {
 
 
 @media only screen and (max-width: 665px) {
+    .main-bg {
+        padding-top: 7rem;
+        padding-bottom: 3rem;
+    }
+    
     .profile-container {
         flex-direction: column;
     }
