--- a/main.css
+++ b/main.css
@@ -909,6 +909,68 @@ form .btn:hover {
 
 }
 
+@media only screen and (max-width: 425px) {
+    .profile-container {
+        background-color: transparent;
+        box-shadow: none;
+    }
+
+    .main-bg {
+        padding-top: 6rem;
+        padding-bottom: 0rem;
+    }
+
+    .profile-img {
+        margin: 2rem .5rem 2rem 1rem;
+    }
+
+    .profile {
+        padding-left: 1.5rem;
+        margin-right: 0rem;
+    }
+
+    .education-items {
+        padding: 1rem;
+        padding-bottom: 2rem;
+        width: 12rem;
+        height: 12rem;
+    }
+
+    .experience-container {
+        padding: 1rem;
+    }
+    
+    .education-date {
+        font-size: 1rem;
+        padding-top: 1rem;
+    }
+
+    .hover-card {
+        font-size: 2rem;
+    }
+
+    .education-details h4 {
+        font-size: 1.1rem;
+    }
+
+    .education-details h5 {
+        font-size: .9rem;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .skills-img { 
+        width: 11rem;
+        height: 11rem;
+    }
+    
+    .skills-img img {
+        width: 8.2rem;
+        padding-left: 1.3rem;
+        margin-top: -0.6rem;
+    }
+}
+
 
 /*Styling for the portfolio page*/
 
