--- a/main.css
+++ b/main.css
@@ -794,6 +794,9 @@ form .btn:hover {
     .contact-container{
         padding: 4rem 1rem 3rem 1rem;
     }
+    .back-to-top {
+        visibility: hidden;
+    }
 }
 
 
