--- a/main.css
+++ b/main.css
@@ -622,6 +622,7 @@ form .btn:hover {
 @media only screen and (max-width: 870px) {
     .nav-links a {
         margin-right: .8rem;
+        font-size: 1.17rem;
     }
 
     .skills-img {
