--- a/main.css
+++ b/main.css
@@ -180,41 +180,44 @@ i:hover {
     align-items: flex-start;*/
     width: 80%;
     margin: auto;
-    padding: 2rem;
-}
-
-.experience-continer > div {
+    padding: .5rem 2rem 2rem 2rem;
     text-align: start;
     padding-left: 7rem;
 }
 
-.experience-items {
+.experience-header {
     display: grid;
-    grid-template-columns: 40% 50%;
-    padding: 1rem 2rem 2rem 2rem;
-    /*justify-content: space-around;
-    align-items: center;*/
+    grid-template-columns: 40% 55%;
+    padding-bottom: 1rem;
+}
+
+.experience-details {
+    display: grid;
+    grid-template-columns: 40% 55%;
+    padding-bottom: .7rem;
+}
+
+.comp-name {
+    color: #fff;
+    font-size: 21px;
+    text-transform: uppercase;
+    font-family: heebo, sans-serif;
+    font-weight: 700;
+}
+
+.experience-item {
+    padding: 1rem 2rem .5rem 2rem;
 }
 
 .experience-date {
     width: 100%;
-    margin-left: 8%;
     font-size: 20.25px;
     font-family: roboto, sans-serif;
     font-weight: 400;
     color: rgba(255, 255, 255, 0.75);
 }
 
-.experience-details > h4 {
-    color: #fff;
-    font-size: 21px;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    font-family: heebo, sans-serif;
-    font-weight: 700;
-}
-
-.experience-details > h5 {
+.experience-role > h5 {
     font-size: 16px;
     font-family: roboto, sans-serif;
     font-weight: 400;
@@ -223,12 +226,13 @@ i:hover {
     margin-bottom: 10px;
 }
 
-.experience-details > p {
+.experience-role > p {
     font-size: 15px;
     font-family: roboto, sans-serif;
     font-weight: 400;
     letter-spacing: 0.8px;
     color: rgba(255, 255, 255, 0.75);
+    padding-bottom: .4em;
 }
 
 .education {
